# rbac_mlflow

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  architecture.md  docker-compose.yml  idea.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  tasks.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_rbac_tables.py  002_create_dataset_tables.py  003_datasets_under_experiments.py  004_drop_dataset_tables.py
backend/src/rbac_mlflow/: bootstrap.py  config.py  db.py  main.py  mlflow_client.py  models.py  s3_client.py
backend/src/rbac_mlflow/admin/: router.py
backend/src/rbac_mlflow/auth/: dependencies.py  jwks.py  middleware.py  provider.py  router.py
backend/src/rbac_mlflow/auth/providers/: base.py  iam.py  keycloak.py
backend/src/rbac_mlflow/datasets/: router.py  schemas.py  service.py
backend/src/rbac_mlflow/experiments/: evaluation.py  router.py  schemas.py  service.py
backend/src/rbac_mlflow/rbac/: constants.py  dependencies.py  schemas.py  service.py
backend/tests/: conftest.py  test_admin_router.py  test_auth_me.py  test_auth_middleware.py  test_auth_providers.py  test_datasets.py  test_evaluation.py  test_experiment_permission.py  test_experiments.py  test_golden_sample.py  test_health.py  test_mlflow_client.py  test_rbac_dependencies.py  test_rbac_service.py  test_run_start.py
frontend/: Dockerfile  next.config.ts  oxlint.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: auth.ts  proxy.ts
keycloak/: realm-export.json
mlflow/: Dockerfile
postgres/init/: 01-create-databases.sh
scripts/: gen-certs.sh  seed_golden_sample.py
test_project/: pyproject.toml  test_evals.py
tests/fixtures/: golden_sample.jsonl
traefik/: traefik.yml
(+20 files in other folders)
